--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "next": "14.2.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
     "swiper": "^11.1.3"
   },
