--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "yet-another-react-lightbox": "^3.23.4"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
